Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

3.34      2021-08-03 20:09:33Z
    - Fix modern UCBrowser detection (GH#189) (konstantin-pustovalov-qs)
    - Switch from Test::FailWarnings to Test::Warnings (GH#190) (Olaf Alders

3.33      2021-07-21 14:38:49Z
    - Yahoo iOS App as not a robot (GH#188) (Yasuharu Iida)

3.32      2021-07-20 21:13:13Z
    - add headlesschrome as robot (GH#187) (Ilya Rassadin)
    - Tidy imports (GH#184) (Olaf Alders)

3.31      2020-07-29 14:29:55Z
    - Replace last use of "vars" with "our" (GH#182) (James Raspass)

3.30      2020-07-20 15:45:22Z
    - Fix MS Edge browser_beta capturing (GH#181) (moti)

3.29      2020-07-14 15:36:33Z
    - Fix MS Edge detections (GH#180) (moti)

3.28      2020-07-10 14:59:08Z
    - Fix typo for 'wv' (GH#178) (Jon Jensen)

3.27      2020-04-15 16:18:20Z
    - Improve detection for MS Edge (GH#177) (Zak B. Elep)

3.26      2020-03-16 21:54:21Z
    - Fix Microsoft Edge detection (GH#176) (Mahdi Zarei)

3.25      2019-11-20 14:11:51Z
    - Remove a near duplicate regex (GH#171) (Gregory Oschwald)

3.24      2019-10-31 17:48:35Z
    - Bump JSON::PP to 4.04. Fixes #169 (GH#170) (Olaf Alders)
    - Remove links to AnnoCPAN (GH#168) (Petr)
    - Fixed pod error as reported by CPANTS. (GH#166) (Mohammad S Anwar)
    - Fix bad syntax in SYNOPSIS (reported by John Blumel) (GH#163) (Olaf Alders)

3.23      2019-04-04 19:26:18Z
    - Add BingPreview to bot checker (GH#162) (James Waters)

3.22      2019-03-07 15:11:01Z
    - Add a u2f() method (GH#161) (Patrick Cronin and Olaf Alders)
    - Don't warn on fake UA strings. (GH#160) (Olaf Alders)

3.21      2019-02-05 01:50:40Z
    - Faster edge test (GH#158) (Marco Fontani)

3.20      2018-12-04 18:37:08Z
    - Fix minor version warning (GH#152) (Olaf Alders)
    - Fix a typo in the POD. (GH#149) (gregor herrmann)

3.19      2018-10-11 16:04:00Z
    - Detect ltx71 bot (GH#147) (Olaf Alders)