@@ -107,6 +107,7 @@ RealPlayer
 Rifkin
 Ritter
 rubylib
+samsung
 seamonkey
 Smidsrod
 Sorcinelli
